adjusted grid to desired boxes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
         <header>Sketchy Pad</header>
-        <div class="container">hi</div>
+        <div class="container"></div>
 </body>
 </html>
