--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 <body>
         <header>Sketchy Pad</header>
         <div class="container"></div>
+        <div>
+                <div id="sizeValue">16 x 16</div>
+                <input id="sizeSlider" type="range" value="16" min="10" max="100"> 
+        </div>
 </body>
 </html>
