--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div>
                 <div id="sizeValue">16 x 16</div>
                 <input id="sizeSlider" type="range" value="16" min="10" max="100"> 
+                <button id="reset">Reset</button>
+                <!-- <button id="clear">Clear</button> -->
         </div>
+
 </body>
 </html>
