--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div>
                 <div id="sizeValue">16 x 16</div>
                 <input id="sizeSlider" type="range" value="16" min="10" max="100"> 
-                <button id="reset">Reset</button>
-                <!-- <button id="clear">Clear</button> -->
+                <button id="reset">Reset to Default</button>
+                <button id="clear">Clear Current Canvas</button>
         </div>
 
 </body>
