--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sketchy Pad</title>
-        <link rel="stylesheet" href="./index.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
         <link rel="icon" type="image/x-icon" href="./images/pencil.png">
         <script src="./index.js" defer></script>
 </head>
