Finished simple CSS

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <header>Sketchy Pad</header>
         <div class="display">
                 <div class="container"></div>
-                <div>
-                        <div id="sizeValue">16 x 16</div>
+                <div class="setting">
+                        <div id="sizeValue">Grid Size: 16 x 16</div>
                         <input id="sizeSlider" type="range" value="16" min="10" max="100"> 
-                        <button id="reset">Reset to Default</button>
-                        <button id="clear">Clear Current Canvas</button>
+                        <div class="buttons">
+                                <button id="reset">Reset to Default</button>
+                                <button id="clear">Clear Current Canvas</button>
+                        </div>
                 </div>
         </div>
         <footer id="footer">©thatcherphan 2023</footer>
